Fix VAR for C24_WMDE_Desktop_DE_17
- Give `ButtonCloseWithText` a unique class modifier to avoid overlap with `ButtonClose` (used in SoftClose). We can't rename it to something like `.wmde-banner-close-with-text` only because that would break all tests that assume the element that's supposed to close the main banner is always named `.wmde-banner-close`.
- Adapt styling and text of minimized banner.

Ticket: https://phabricator.wikimedia.org/T380464

--- a/banners/desktop/C24_WMDE_Desktop_DE_17/styles/MainBanner_var.scss
+++ b/banners/desktop/C24_WMDE_Desktop_DE_17/styles/MainBanner_var.scss
@@ -54,5 +54,10 @@ $form-width: 300px !default;
 		flex-direction: column;
 		width: $form-width;
 		padding: 0;
+
+		.wmde-banner-close.wmde-banner-close-with-text {
+			right: 14px;
+			top: 8px;
+		}
 	}
 }
