--- a/src/components/ButtonCloseWithText/ButtonCloseWithText.scss
+++ b/src/components/ButtonCloseWithText/ButtonCloseWithText.scss
@@ -1,14 +1,10 @@
 @mixin layout( $top: 5px, $right: 5px ) {
-	&-close {
+	&-close.wmde-banner-close-with-text {
 		position: absolute;
 		right: $right;
 		top: $top;
 		width: 100px;
 		height: 32px;
 		z-index: 2;
-	}
-
-	&-close-link {
-		text-decoration: none;
 	}
 }
